style: fixed the long of inputs in login and aligned the language button

--- a/src/pages/Login/styles.styl
+++ b/src/pages/Login/styles.styl
@@ -1,3 +1,4 @@
+@import '../../stylus/variables.styl'
 
 .login
   background: rgb(39,68,114)
@@ -20,8 +21,8 @@
     align-self: center
     background: basicColor1
     padding: 30px 10px
-    height: 60%
-    width: 250px
+    height: 550px
+    width: 300px
     border-radius: 20px
     display: flex
     flex-direction: column
@@ -29,7 +30,7 @@
     align-items: center
     flex-wrap: wrap
     &--up
-      margin-top: 80px
+      margin-top: 30%
       height: auto
       align-self: center
       font-size: 20px
@@ -37,7 +38,7 @@
       .a
         text-align: center
         color:#272C33
-        font-size: 20px
+        font-size: 1.8rem
       .b
         font-size: inherit
         border-radius: 27px
@@ -45,16 +46,18 @@
         justify-content: center
         align-items: center
         letter-spacing: 1px
-        .b_1
+        margin-top: 2%
+        &_1
           font-weight: 100
-          font-style: italic
+          font-family: Font2
           color: #41729F
-          font-size: 25px
+          font-size: 2.5rem
           margin-right: 5px
-        .b_2
+        &_2
           color: #274472
           text-transform: uppercase
-          font-size: 35px
+          font-size: 3rem
+          font-family: Font3
     .login__down
       margin-top: 40px
       width: 90%
@@ -72,14 +75,15 @@
           height: 30px
           width: 100%
           padding-bottom: 5px
-          margin-bottom: 10px
+          margin-bottom: 20px
           border-bottom: 1px solid #27447278
           display: flex
           .fas
             padding: 10px 10px 0 0
             color: color4
-            font-size: 12px 
+            font-size: 12px
           input
+            max-width: 200px
             border: 0
             border-style: none
             font-size: 12px
@@ -97,7 +101,6 @@
         text-transform: uppercase
         cursor: pointer
         font-weight: bold
-        
 
 @media screen and (min-width: 319px)
     .login__up
